--- a/Project.toml
+++ b/Project.toml
@@ -7,19 +7,21 @@ version = "0.2.4"
 JSExpr = "97c1335a-c9c5-57fe-bc5d-ec35cebe8660"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
+ghr_jll = "07c12ed4-43bc-5495-8a2a-d5838ef8d533"
 
 [compat]
 JSExpr = "0.5"
 JSON = "0.18, 0.19, 0.20, 0.21"
 Observables = "0.2.3, 0.3"
 WebIO = "0.8"
-julia = "0.7, 1"
+julia = "1.3"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Blink = "ad839575-38b3-5650-b840-f874b8c74a25"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Blink", "Test"]
